# CotrikMesh

./: CMakeLists.txt  README.md  build.sh
apps/: .~lock.CMakeLists.txt#  Align.cpp  ArgumentManager.h  AutoMeshOpt.cpp  CMakeLists.txt  CMakeLists.txt.bak  CheckManifold.cpp  CheckMesh.cpp  CleanStructure.cpp  ClipMesh.cpp  ClosedQuadMeshSimplify.cpp  CollapseComponent.cpp  ColorHexMesh.cpp  ConvertFileFormat.cpp  ConvertQuadToTriangle.cpp  ConvexCut.cpp  CotrikClustering.cpp  DisplayFrameField.cpp  ExtractBaseComplex.cpp  ExtractBaseComplexQuad.cpp  ExtractBaseComplexSeparatedSurfaces.cpp  ExtractBaseHomology.cpp  ExtractBaseHomologyQuad.cpp  ExtractBaseMesh.cpp  ExtractCoverSpace.cpp  ExtractCoverSpace2.cpp  ExtractCoverSpace3.cpp  ExtractCutGraph.cpp  ExtractDualMesh.cpp  ExtractFaceSegments.cpp  ExtractFrameField.cpp  ExtractGaussianCurvature.cpp  ExtractHomotopyBases3.cpp  ExtractHomotopyLoops.cpp  ExtractLayers.cpp  ExtractLocalRegion.cpp  ExtractLoops.cpp  ExtractMainSheets.cpp  ExtractMinSpanTree.cpp  ExtractPatches.cpp  (+73 more)
birch/: BirchClustering.cpp  CFEntry.cpp  CFEntry.h  CFNode.h  CFTree.h  CFTree_CFCluster.h  CFTree_Redist.h  item_type.h  subcluster_summary.h
cuda-apps/: ArgumentManager.h  CMakeLists.txt
glm/detail/: dummy.cpp
libcotrik/: CMakeLists.txt
libcotrik/src/: AutoMeshOpt.h  BaseComplex.cpp  BaseComplex.h  BaseComplexChord.cpp  BaseComplexChord.h  BaseComplexEditor.cpp  BaseComplexEditor.h  BaseComplexQuad.cpp  BaseComplexQuad.h  BaseComplexSheet.cpp  BaseComplexSheet.h  BaseComplexSheetQuad.cpp  BaseComplexSheetQuad.h  CollapseSimplifier.cpp  Component.cpp  Component.h  DiagnalCollapseSimplifier.cpp  DiagnalCollapseSimplifier.h  DoubletSimplifier.cpp  DoubletSimplifier.h  Dual.cpp  Dual.h  DualMesh.cpp  EdgeLines.cpp  EdgeRotateSimplifier.cpp  EdgeRotateSimplifier.h  FeatureLine.cpp  Frame.cpp  Frame.h  FrameField.cpp  FrameField.h  FrameOpt.cpp  GeodesicDistance.h  GlobalSheetSimplifier.cpp  GlobalSheetSimplifier.h  LocalMeshOptASJ.cpp  LocalMeshOptFixBoundary.cpp  LocalMeshOptFixBoundary.h  MST.cpp  MST.h  (+47 more)
libframe/: CMakeLists.txt
libframe/src/: base_complex.cpp  base_complex.h  component_class.cpp  component_class.h  constants.h  extract_sheet.cpp  frame_of_mesh.cpp  frame_of_mesh.h  global_functions.cpp  global_functions.h  global_types.cpp  global_types.h  io.cpp  io.h  laplacian_smoothing.cpp  laplacian_smoothing.h  main.cpp  parameterization.cpp  parameterization.h  parametric_optimization.cpp  parametric_optimization.h
libgeodesic_heart/: Makefile  Makefile_Debug  geodesic
libgeodesic_heart/include/: hmCholeskyFactor.h  hmConstants.h  hmContext.h  hmDenseMatrix.h  hmPairSizeTDouble.h  hmSparseMatrix.h  hmSparseMatrix.h~  hmTriDistance.h  hmTriMesh.h  hmUtility.h  hmVec3.h  hmVectorDouble.h  hmVectorPairSizeTDouble.h  hmVectorSizeT.h
libgeodesic_heart/src/: hmSparseMatrix.c  hmTriDistance.c  hmTriMesh.c  main.c
libgeodesic_heart/test/: Corners.vtk  SharpEdges.vtk  bunny_fixed.off  cap.cluster  cap.faces.obj.cluster.vtk  cap.faces.objcluster.vtk  cap.faces.ply  excellentCells.vtk  goodCells.vtk  highCells.vtk  set.txt  set.txt~  warningCells.vtk
libigl/: CONTRIBUTING.md  LICENSE.md  README.md  RELEASE_HISTORY.md  VERSION.txt  before-submitting-pull-request.md  coding-guidelines.html  coding-guidelines.md  index.html  matlab-to-eigen.html  style-guidelines.html  style-guidelines.md  style.css  todos.txt
libigl/file-formats/: bf.html  dmat.html  index.html  rbr.html  tgf.html
libigl/optional/: CMakeLists.txt  README.md  index.html
libigl/python/: CMakeLists.txt  README.md  py_doc.cpp  py_doc.h  py_igl.cpp  python_shared.cpp  python_shared.h
libnaeem/: CMakeLists.txt
libnaeem/src/: AngleBasedSmoothQuadMesh.cpp  AngleBasedSmoothQuadMesh.h  ChordCollapse.cpp  ChordCollapse.h  ChordExtractor.cpp  ChordExtractor.h  DiagonalCollapse.cpp  DiagonalCollapse.h  DirectSeparatrixCollapse.cpp  DirectSeparatrixCollapse.h  EdgeCollapse.cpp  EdgeCollapse.h  EdgeRotation.cpp  EdgeRotation.h  FeatureExtractor.cpp  FeatureExtractor.h  LocalSimplifier.cpp  LocalSimplifier.h  MeshUtil.cpp  MeshUtil.h  PQueue.cpp  PQueue.h  ParallelFor.h  QuadSplit.cpp  QuadSplit.h  QuadSurfaceMapper.cpp  QuadSurfaceMapper.h  SemiGlobalSimplifier.cpp  SemiGlobalSimplifier.h  SeparatrixCollapse.cpp  SeparatrixCollapse.h  SimplificationOperation.cpp  SimplificationOperation.h  Smooth.cpp  Smooth.h  ThreeFivePair.cpp  ThreeFivePair.h  VertexRotation.cpp  VertexRotation.h  VertexSplit.cpp  (+1 more)
scripts/: change_extention.sh  correlation_sheet.r  gen_all_dominant_sheets_correlation.sh
srcLibs/: CMakeLists.txt
srcLibs/libcotrik/: CMakeLists.txt  CMakeLists.txt~
srcLibs/libcotrik/src/: AutoMeshOpt.cpp  BaseComplex.cpp  BaseComplexCleaner.cpp  BaseComplexCleaner.h  BaseComplexEditor.cpp  BaseComplexEditor.h  BaseComplexQuad.cpp  BaseComplexSheet.cpp  BaseComplexSheetQuad.cpp  BaseComplexSheetQuad.h  CollapseSimplifier.h  DiagnalCollapseSimplifier.cpp  Dual.cpp  Dual.h  DualMesh.h  EdgeLines.cpp  EdgeLines.h  FeatureLine.h  Frame.cpp  Frame.h  FrameField.cpp  FrameOpt.h  GeodesicDistance.cpp  GetSet.h  LayerOpt.cpp  LayerOpt.h  LocalMeshOpt.cpp  LocalMeshOpt.h  LocalMeshOptASJ.h  LocalSimplifier.cpp  Mesh.h  MeshASJOpt.h  MeshFileReader.h  MeshFileWriter.cpp  MeshFileWriter.h  MeshOpt.cpp  MeshOptFixBoundary.cpp  MeshOptFixBoundary.h  MeshQuality.cpp  MeshQuality.h  (+24 more)
srcLibs/libnaeem/: CMakeLists.txt
srcLibs/libnaeem/src/: AngleBasedSmoothQuadMesh.cpp  AngleBasedSmoothQuadMesh.h  DiagonalCollapse.cpp  DiagonalThreeFivePair.cpp  DiagonalThreeFivePair.h  DirectSeparatrixCollapse.cpp  FeatureExtractor.cpp  FeatureExtractor.h  KDTree.cpp  KDTree.h  Memento.h  MeshUtil.cpp  MeshUtil.h  PQueue.h  ParallelFor.h  QuadSplit.cpp  QuadSplit.h  QuadSurfaceMapper.cpp  QuadSurfaceMapper.h  Renderer.h  SemiGlobalSimplifier.cpp  SemiGlobalSimplifier.h  SeparatrixCollapse.cpp  SimplificationOperation.cpp  SingularityPair.h  Smooth.cpp  Smooth.h  ThreadPool.h  ThreeFivePair.cpp  ThreeFivePair.h  VertexRotation.h  VertexSplit.cpp  VertexSplit.h
verdict/: CMakeLists.txt  build.sh
(+4718 files in other folders)
